--- a/week2/.gitignore
+++ b/week2/.gitignore
@@ -119,7 +119,7 @@ Network Trash Folder
 Temporary Items
 .apdisk
 # ignore content of uploads folder
-uploads/-
+uploads/*
 # except one (empty) file to have the folder in version control
 !uploads/.gitkeep
 
