--- a/week2/.gitignore
+++ b/week2/.gitignore
@@ -122,4 +122,6 @@ Temporary Items
 uploads/*
 # except one (empty) file to have the folder in version control
 !uploads/.gitkeep
+thumbnails/*
+!thumbnails/.gitkeep
 
